feat- side bar navigation

--- a/src/styles/basics/_layout.scss
+++ b/src/styles/basics/_layout.scss
@@ -1,28 +1,39 @@
 .main-header {
   background-color: $clr2;
   height: 6vh;
-  padding: 10px ;
+  padding: 10px;
 }
 .logo-container {
-  
-    font-family: $logoFont;
-    color: $clr7;
-    font-size: 1.5rem;
-    padding-bottom: 5px;
-  
+  font-family: $logoFont;
+  color: $clr7;
+  font-size: 1.5rem;
+  padding-bottom: 5px;
+  margin-left: 50px;
 }
 .logo-icon {
   transition: 0.5s;
   color: white;
   height: 35px;
   width: 35px;
-//   margin: 5px;
+  //   margin: 5px;
 }
-.navBar{
-    width: 50px;
-    background-color: $clr6;
-    padding: 5px;
-    height: 95vh;
+.sideNavBar {
+  width: 150px;
+  background-color: $clr6;
+  padding: 5px;
+  height: 90vh;
+  margin-right: 10px;
+//   position: fixed;
+}
+.nav-icon {
+  width: 35px;
+  height: 35px;
+  margin-bottom: 2.5px;
+  margin-right: 10px;
+}
+.nav-icon-text {
+  font-family: $logoFont;
+  font-size: 1.3rem;
 }
 .main-router-view {
 }
