--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,13 +1,23 @@
 
 // COLOR PALETTE
 
-$clr1: #6D9DC5;
-$clr2: #2274A5;
+$clr1: #d2eff1;
+$clr2: #ec7353;
 $clr3: #80DED9;
 $clr4: rgb(244, 67, 54);
-$clr5: #2274A5;
-$clr6: #445E93;
-$clr7: rgb(22, 22, 21);
+$clr5: #a5dbde;
+$clr6: #d4f1f4;
+$clr7: #dfac96;
+$clr8: #254872;
+
+
+// $clr1: #6D9DC5;
+// $clr2: #2274A5;
+// $clr3: #80DED9;
+// $clr4: rgb(244, 67, 54);
+// $clr5: #2274A5;
+// $clr6: #445E93;
+// $clr7: rgb(22, 22, 21);
 
 // LAYOUT BREAKPOINTS
 
