--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -9,6 +9,8 @@ $clr5: #a5dbde;
 $clr6: #d4f1f4;
 $clr7: #dfac96;
 $clr8: #254872;
+//background-image
+$clr9: linear-gradient(to right top, #e6fbfe, #c2eaee, #9dd8de, #75c7cd, #45b6bc);
 
 
 // $clr1: #6D9DC5;
